Fix for fix for sidebar scrolling
In [df8b0148c08003b2830245ba31c05c542e522848], a change was introduced
to fix the sidebar scrolling, but the width of the content wasn't correct.

In some browsers, the content div was very small, so now we explictly
set right to 0px and set some padding to allow for scrollbar overlap.

--- a/submin/static/www/css/master.css
+++ b/submin/static/www/css/master.css
@@ -10,9 +10,11 @@ body {
 	float: left;
 	position: fixed;
 	left: 162px;
+	right: 0px;
 	top: 0px;
 	bottom: 0px;
 	margin-left: 1em;
+	padding-right: 1em;
 	overflow: auto;
 }
 
